Generate checkers animation from ppm files.